Update index.html, styles.css, and game.js with enhancements

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             </div>
         </div>
     </div>
+	<div id="mobileControls" class="d-block d-md-none">
+		<button id="shootButton" class="btn btn-danger btn-lg rounded-circle">FIRE</button>
+	</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
