--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <!-- Audio Elements -->
     <audio id="menuMusic" loop>
         <source src="Sounds/StudioKolomna - Main Track.mp3" type="audio/mpeg">
     </audio>
 </head>
 <body>
-    <!-- Game Settings Modal -->
+    <!-- Game Settings Modal (Home Screen) -->
     <div class="modal fade" id="settingsModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content bg-dark text-light">
@@ -21,6 +20,10 @@
                     <h5 class="modal-title">Game Settings</h5>
                 </div>
                 <div class="modal-body">
+                    <div class="mb-3">
+                        <label class="form-label">Player Name</label>
+                        <input type="text" class="form-control bg-secondary text-light" id="playerName" placeholder="Enter your name" maxlength="20">
+                    </div>
                     <div class="mb-3">
                         <label class="form-label">Difficulty</label>
                         <select class="form-select bg-secondary text-light" id="difficulty">
@@ -30,18 +33,9 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Country</label>
-                        <select class="form-select bg-secondary text-light" id="country">
-                            <option value="usa">United States</option>
-                            <option value="uk">United Kingdom</option>
-                            <option value="japan">Japan</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
                         <label class="form-label">Ship Color</label>
                         <div class="d-flex align-items-center gap-3">
-                            <input type="color" class="form-control form-control-color ship-color-input" 
-                                   id="shipColor" value="#00ff00">
+                            <input type="color" class="form-control form-control-color ship-color-input" id="shipColor" value="#00ff00">
                             <div class="ship-preview-container">
                                 <canvas id="shipPreview" width="100" height="60"></canvas>
                             </div>
@@ -58,15 +52,23 @@
                     <div class="mb-3">
                         <label class="form-label">Game Background</label>
                         <select class="form-select bg-secondary text-light" id="background">
-                            <option value="space">Space</option>
+                            <option value="space">Space (Black Stars)</option>
                             <option value="nebula">Nebula</option>
                             <option value="galaxy">Galaxy</option>
                             <option value="stars">Star Field</option>
+                            <option value="white">White Mode</option>
+                            <option value="black">Black Mode</option>
+                            <option value="sky">Sky Mode</option>
+                            <option value="gray">Gray Mode</option>
+                            <option value="aurora">Aurora</option>
+                            <option value="cosmic-dust">Cosmic Dust</option>
                         </select>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" id="startGame">Start Game</button>
+                    <!-- NEW: Exit Button -->
+                    <button type="button" class="btn btn-danger" id="exitGame">Exit</button>
                 </div>
             </div>
         </div>
@@ -81,7 +83,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Final Score: <span id="finalScore">0</span></p>
-                    <p>High Score: <span id="highScore">0</span></p>
+                    <p>High Score: <span id="highScorePlayer"></span> - <span id="highScore">0</span></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-warning" onclick="location.reload()">Play Again</button>
@@ -106,11 +108,20 @@
                 <h5 class="mb-0">Lives</h5>
                 <h2 class="mb-0"><span id="hitCounter">3</span></h2>
             </div>
+            <!-- NEW: Level Display -->
+            <div class="level-container">
+                <h5 class="mb-0">Level</h5>
+                <h2 class="mb-0"><span id="currentLevel">1</span></h2>
+            </div>
+        </div>
+        <!-- NEW: Home Button (Visible When Paused) -->
+        <div class="position-absolute pause-overlay" id="pauseOverlay" style="display: none;">
+            <button class="btn btn-lg btn-primary" id="homeBtn">Home</button>
         </div>
     </div>
-	<div id="mobileControls" class="d-block d-md-none">
-		<button id="shootButton" class="btn btn-danger btn-lg rounded-circle">FIRE</button>
-	</div>
+    <div id="mobileControls" class="d-block d-md-none">
+        <button id="shootButton" class="btn btn-danger btn-lg rounded-circle">FIRE</button>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
